src/test/resources/parse-error/param-redefinition.c
int f(int x) {
  int x;
}
